--- a/AppCarros/AppCarros/Login/LoginStoryboard.storyboard
+++ b/AppCarros/AppCarros/Login/LoginStoryboard.storyboard
@@ -54,13 +54,13 @@
                                                     <action selector="loginButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="AjS-N5-Wkt"/>
                                                 </connections>
                                             </button>
-                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Digite seu login" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4jx-Q8-jpB">
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Digite seu login" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4jx-Q8-jpB">
                                                 <rect key="frame" x="16" y="44.333333333333314" width="262" height="19.666666666666671"/>
                                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Digite sua senha" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gcB-lb-loO">
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Digite sua senha" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gcB-lb-loO">
                                                 <rect key="frame" x="16" y="117.33333333333331" width="262" height="19.666666666666657"/>
                                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
